Refactor services to improve exception handling and code consistency
- Updated CardService to use ResourceNotFoundException and BadRequestException for better error handling.
- Refactored ChecklistService to replace RuntimeExceptions with ResourceNotFoundException and BadRequestException.
- Enhanced ColumnService with consistent exception handling for resource not found scenarios.
- Modified CommentService to utilize ResourceNotFoundException and BadRequestException for clearer error messages.
- Adjusted EmailService to remove unnecessary comments and improve code clarity.
- Improved InvitationService by replacing RuntimeExceptions with ResourceNotFoundException and BadRequestException.
- Updated NotificationService to use ResourceNotFoundException and BadRequestException for better error handling.
- Refactored WebSocketNotificationService to use a constant for board topic prefix for improved readability.